Código HTML e CSS
Segundo versionamento em Git

--- a/Projeto_GitHub/index.html
+++ b/Projeto_GitHub/index.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
     <title>Git e GitHub</title>
 </head>
+
 <body>
-    <h1>Repositório no GitHub</h1>
+    <h1 class="titulo">Repositório no GitHub</h1>
     <hr>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur nihil, fuga adipisci tempora, quasi doloribus asperiores culpa reiciendis illum quibusdam placeat nam nemo provident necessitatibus a veniam at natus nulla?</p>
+    <ul class="lista">
+        <li>
+            <p class="texto1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur nihil, fuga adipisci
+                tempora, quasi
+                doloribus asperiores culpa reiciendis illum quibusdam placeat nam nemo provident necessitatibus a veniam
+                at
+                natus nulla?</p>
+        </li>
+        <li>
+            <p class="texto2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem ea sed odio illo, est
+                libero? Ab dolorum
+                saepe at laudantium natus aliquam vitae, mollitia, nisi ipsam ullam magnam eligendi libero?</p>
+        </li>
+    </ul>
+    <hr>
+
+    <img src="https://picsum.photos/seed/picsum/500/300" alt="Imagem Aleatória">
 </body>
+
 </html>
