Alterações do Código
Novas modificações e correções de código e imagem

--- a/Projeto_GitHub/index.html
+++ b/Projeto_GitHub/index.html
@@ -28,7 +28,7 @@
     </ul>
     <hr>
 
-    <img src="https://picsum.photos/seed/picsum/500/300" alt="Imagem Aleatória">
+    <img src="imgs/GitHub.png" alt="Imagem GitHub">
 </body>
 
 </html>
